$Id$                       -*-text-*-


**** 1.26 [unreleased]

Fix rt.cpan.org #132921

	EDNS OPT handling


**** 1.25 Jun 26, 2020

	Parsing of TSIG keyfiles made more robust.


**** 1.24 May 27, 2020

	Accept TSIG key generated by BIND tsig-keygen.

	Add Net::DNS::RR::AMTRELAY package.


**** 1.23 Mar 18, 2020

	Deprecate 2-argument form of TSIG create().

Fix rt.cpan.org #132170

	[Documentation] Problems with TSIG on ddns update.

Fix rt.cpan.org #131906

	Undefined errorstring/warning when axfr fails


**** 1.22 Feb 13, 2020

Fix rt.cpan.org #131579

	Parse issue in Net::DNS::RR->token

Feature
	Provide rudimentary decode and print for DSO packet.


**** 1.21 Aug 30, 2019

	Fix error report for non-existent or recursive zone file $INCLUDE.

	Emit one deprecation warning on invocation of obsolete method.

	Rework OPT.pm EDNS0 option construction.

	Remove obsolete Net::DNS::RR::DLV package.

	Add Net::DNS::RR::ZONEMD package.

Fix rt.cpan.org #128901

	background TCP query logic expects to read entire response at once


**** 1.20 Mar 22, 2019

	TSIG MAC representation changed to Base64 (align with BIND).

	Update Parameters.pm to resync with IANA registry.

	Refactor resolver test scripts.

	Revise documentation examples to use AAAA instead of A records.

Fix rt.cpan.org #128081

	Recurse.pm fails to resolve domain "kickboxingireland.ie"

Fix rt.cpan.org #127307

	Provide a more informative exception report if application code
	has no "use Net::DNS::SEC" declaration but nevertheless attempts
	to invoke the DNSSEC sign or verify features.


**** 1.19 Nov 14, 2018

	Show structure of EDNS options using Perl-like syntax.

Fix rt.cpan.org #127557

	Net::DNS::Resolver::Base should use 3 args open

Fix rt.cpan.org #127182

	Incorrect logic can cause DNS search to emit fruitless queries.


**** 1.18 Sep 21, 2018

	Documentation revised to remove ambigous use of "answer" which
	has been used to refer to both the answer section of a packet